<resources>
    <string name="app_name">BeerMe</string>
    <string name="startup_button_login">Log in</string>
    <string name="startup_button_signup">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign up</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint">I am a</string>
    <string name="hint_beerophile">beerophile</string>
    <string name="hint_begginer">beginner</string>
    <string name="hint_preferred">Looking for a</string>
    <string name="button_sign_out">Sign out</string>
    <string name="button_apply">Apply</string>
    <string name="error_profile_incomplete">Please complete your profile</string>
    <string name="no_available_users">No available users</string>
    <string name="send_button_text">Send</string>
    <string name="hint_message">Message</string>
</resources>
