<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/profile_activity"
            android:id="@+id/imageView7"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/emailET"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="176dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.494" />

    <EditText
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/passwordET"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintTop_toBottomOf="@+id/emailET"
            android:layout_marginTop="36dp" />

    <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            style="@style/StandardButton"
            android:onClick="onLogin"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:text="@string/login_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordET"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintVertical_bias="0.083" />

</android.support.constraint.ConstraintLayout>